--- a/public/form.ejs
+++ b/public/form.ejs
@@ -8,9 +8,25 @@
 </head>
 <body>
 
+	<ul>
+		<% info.forEach(function(justOne) { %>
+		<li>
+		Id - <strong><%= justOne.theaterId %></strong> <br>
+		City - <strong><%= justOne.location.address.city %></strong> /
+		State - <strong><%= justOne.location.address.state %></strong> /
+		Zip code - <strong><%= justOne.location.address.zipcode %></strong> /
+		Street - <strong><%= justOne.location.address.street1 %></strong> <br> <br>
+		</li>
+		<% }); %>
+		</ul>
+		
 	<form action="/addinfo" method="post">
-       <input type="text" placeholder="Enter your name" name="Surname">
-	   <input type="number" placeholder="Enter your age" name="Age">
+
+
+
+       <input type="text" placeholder="Enter your name" name="name">
+	   <input type="password" placeholder="Enter your password" name="password">
+	   <input type="email" placeholder="Enter your email" name="email">
 	   <input type="submit" value="Send">
  		<img src="img/images.png" alt="">
 	   <!-- <input type="password">
