--- a/public/form.ejs
+++ b/public/form.ejs
@@ -1,58 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-	<ul>
-		<% info.forEach(function(justOne) { %>
-		<li>
-		Id - <strong><%= justOne.theaterId %></strong> <br>
-		City - <strong><%= justOne.location.address.city %></strong> /
-		State - <strong><%= justOne.location.address.state %></strong> /
-		Zip code - <strong><%= justOne.location.address.zipcode %></strong> /
-		Street - <strong><%= justOne.location.address.street1 %></strong> <br> <br>
-		</li>
-		<% }); %>
-		</ul>
-
-	<form action="/addinfo" method="post">
-
-
-
-       <input type="text" placeholder="Enter your name" name="name">
-	   <input type="password" placeholder="Enter your password" name="password">
-	   <input type="email" placeholder="Enter your email" name="email">
-	   <input type="submit" value="Send">
- 		<img src="img/images.png" alt="">
-	   <!-- <input type="password">
-	   <input type="email">
-	   <input type="radio" name="one">
-	   <input type="radio" name="one">
-	   <input type="checkbox">
-	   <input type="color">
-	   <input type="range">
-	   <input type="date">
-	   <input type="time">
-	   <select name="" id="">
-          <option value="">val 1</option>
-		  <option value="">val 1</option>
-		  <option value="">val 1</option>
-
-	   </select>
-<textarea name="" id="" cols="30" rows="10"></textarea> -->
-	</form>
-
-<!-- <script src="script.js"></script>
-
-</body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -66,35 +11,25 @@
     <table>
         <tr>
             <td>ID</td>
-            <td>City</td>
             <td>Name</td>
             <td>Price</td>
-            <td>Update</td>
-            <td>Delete</td>
         </tr>
          <% obj.forEach(function(justOne) { %>
         <tr>
-            <td><%= justOne.theaterId %></td>
-            <td><%= justOne.location.address.city %></td>
-            <td><a class="update" href="update/id=<%= justOne._id %>">Update</a></td>
-            <td><a class="delete" href="delete/id=<%= justOne._id %>">Delete</a></td>
+            <td><%= justOne.uuid %></td>
             <td><%= justOne.name %></td>
             <td><%= justOne.price %></td>
-            <td><a class="update" href="update/<%= justOne.uuid %>">Update</a></td>
-            <td><a class="delete" href="delete/<%= justOne.uuid %>">Delete</a></td>
+            <td><a class="update" href="update/<%= justOne._id %>">Update</a></td>
+            <td><a class="delete" href="delete/<%= justOne._id %>">Delete</a></td>
         </tr>
     <% }); %>
     </table>
     <!-- <form action="/addName" method="post"> -->
-        <input id="usName" type="text" required name="name" placeholder="Please type your name"><br><br>
-        <input id="usPassword" type="password" name="password" placeholder="Please type your Pass"><br><br>
-        <input id="usEmail" type="email" name="email" placeholder="Please type your email"><br><br>
     <form action="/addName" method="post">
         <input id="PrName" type="text" required name="name" placeholder="Name"><br><br>
         <input id="PrPrice" type="number" name="price" placeholder="Price"><br><br>
         <input id="PrImage" type="text" name="image" placeholder="Image"><br><br>
         <input id="PrUUID" type="number" name="uuid" placeholder="UUID"><br><br>
-        <input id="PrDes" type="text" name="description" placeholder="Description"><br><br>
         <input type="submit" onclick="getVal()" >
     <!-- </form> -->
     </form>
